# zeroclaw-cheap

./: Cargo.toml  NOTICE  README.md
.sisyphus/: boulder.json
.sisyphus/drafts/: lark-superset.md  vpn-proxy-support.md
.sisyphus/evidence/: task-1-no-brave.txt  task-1-search-intact.txt  task-1-tests.txt  task-2-fbank-spec.md
.sisyphus/plans/: brave-to-chromium.md  defect-fixes-17.md  docs-sync-auto-share.md  feishu-reply-streaming.md  hook-system.md  lark-superset.md  lark-ws-manager.md  mcp-4fixes.md  mcp-defect-fixes.md  mcp-support.md  ort-sensevoice.md  skill-hotload-crud.md  video-multimodal.md  vpn-proxy-support.md
benches/: agent_benchmarks.rs
crates/zeroclaw-mcp/: Cargo.toml
crates/zeroclaw-mcp/src/: client.rs  config.rs  jsonrpc.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/zeroclaw-mcp/tests/: mcp_integration.rs
docs/: SUMMARY.md  channels-reference.md  commands-reference.md  config-reference.md  feishu-docs-sync-guide.md  mcp-guide.md
scripts/: setup-cn.sh
skills/hook-manage/: SKILL.md
skills/mcp-setup/: SKILL.md
skills/skill-management/: SKILL.md
skills/vpn-control/: SKILL.md
src/: lib.rs  main.rs  multimodal.rs
src/agent/: agent.rs  loop_.rs  prompt.rs
src/channels/: discord.rs  lark.rs  lark_ws_manager.rs  mod.rs  ort_transcription.rs  telegram.rs  transcription.rs  whatsapp.rs
src/config/: mod.rs  schema.rs
src/cron/: scheduler.rs
src/daemon/: mod.rs
src/docs_sync/: client.rs  event_subscriber.rs  mod.rs  sync.rs  watcher.rs  worker.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
tests/: vpn_integration.rs
(+92 files in other folders)
