[package]
name = "zeroclaw-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = ["theonlyhennygod"]
license = "MIT"
description = "MCP (Model Context Protocol) support for ZeroClaw"
repository = "https://github.com/zeroclaw-labs/zeroclaw"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"

dirs = "5"

[dev-dependencies]
tempfile = "3"
